QuestionUbi: alignment fix

--- a/src/components/QuestionUbi/CreateQuestion/style.module.less
+++ b/src/components/QuestionUbi/CreateQuestion/style.module.less
@@ -16,6 +16,7 @@
 
 .avatarUploadButton {
     visibility: hidden;
+    position: absolute;
 }
 
 .avatarImageContainer {
@@ -32,7 +33,7 @@
 
 .avatarImageLabel {
     position: absolute;
-    top: calc(100% + .5rem);
+    top: calc(100% + 2.5rem);
     left: calc(100% - .5rem);
     width: 15rem;
     font-size: @fontSizeS;
